--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^6.1.0",
+    "mongoose-unique-validator": "^3.0.0",
     "morgan": "^1.10.0"
   }
 }
