--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/brickwalker/part3-fullstackopen2021#readme",
   "devDependencies": {
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
